fix tiles on mobile

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -17,6 +17,7 @@ $grid-breakpoints: (
   xl: 1200px
 );
 
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
@@ -89,10 +90,6 @@ p {
         cursor: pointer;
         background: $color-purple;
         text-decoration: none;
-    }
-
-    & + & {
-        margin-left: 15px;
     }
 
     &__block {
@@ -188,6 +185,14 @@ p {
         width: 3.03%;
         height: 20%;
 
+         @media(max-width: map-get($grid-breakpoints, md)) {
+            width: 4%;
+        }
+
+        @media(max-width: map-get($grid-breakpoints, sm)) {
+            width: 8.28%;
+        }
+
         &:hover {
             transform: scale(1.3);
             animation-name: buzz;
@@ -216,21 +221,54 @@ p {
     padding: 3rem;
     margin-bottom: 1rem;
 
+    @media(max-width: map-get($grid-breakpoints, md)) {
+        padding: 2rem;
+    }
+
     &--images {
         margin-right: 1rem;
+
+        @media(max-width: map-get($grid-breakpoints, md)) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-right: 0;
+        }
     }
 
     &--image {
         height: 200px;
         margin: 0 0.25rem 1rem 0.25rem;
+
+        @media(max-width: map-get($grid-breakpoints, md)) {
+            height: auto;
+            width: 100%;
+        }
+    }
+
+    &--image-wrapper {
+        text-align: center;
+
+         @media(max-width: map-get($grid-breakpoints, md)) {
+            padding: 0 1rem;
+        }
     }
 
     &--content {
         display: flex;
+
+        @media(max-width: map-get($grid-breakpoints, md)) {
+            display: block;
+        }
     }
 
     &--description {
         margin-left: 1rem;
+
+        @media(max-width: map-get($grid-breakpoints, md)) {
+            margin-top: 2rem;
+            margin-left: 0;
+        }
     }
 }
 
